# pathlibext

./: .pre-commit-config.yaml  .pylintrc  LICENSE  Makefile  README.md  cmre-metadata.yaml  pyproject.toml  setup.cfg
.github/workflows/: python-package.yml
examples/: copy.py  create_and_delete_tree.py  current_file.py  find.py  match.py  matchcase.py  move.py  remove_tree.py  rmtree.py  size.py  systmpdir.py  time.py  tmpdir.py  tmpdir_in.py
src/pathlibext/: __init__.py  file.py  find.py  json.py  match.py  rmtree.py  shell.py  stat.py  systmpdir.py  tmpdir.py  tmpfile.py  workdir.py
tests/: base_test.py  test_file.py  test_find.py  test_match.py  test_rmtree.py  test_rmtreey.py  test_shell.py  test_stat.py  test_systmpdir.py  test_tmpdir.py
tests/unit/: test_json.py  test_match.py  test_rmtree.py  test_stat.py  test_tmpfile.py  test_workdir.py
