[metadata]
name = pathlibext
version = 0.0.3
author = Giampaolo Cimino
#author_email = gcimino@gmail.com
description = Extends the functionalities of Pythion Pathlib
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gpcimino/pathlibext
project_urls =
    Bug Tracker = https://github.com/gpcimino/pathlibext/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
#install_requires =

# [options.entry_points]
# console_scripts =
#     pyfind = pathlibext.find:find

[options.packages.find]
where = src
